# app/docs/swagger.json
@@ -15,9 +15,39 @@
         "version": "1.0"
     },
     "host": "localhost:8000",
-    "basePath": "/",
+    "basePath": "/v1",
     "paths": {
-        "/api/vi/healthcheck/": {
+        "/category/create": {
+            "post": {
+                "description": "Show all translation history",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "category"
+                ],
+                "summary": "Show history",
+                "operationId": "history",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CategoryCreateRequest"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/healthcheck": {
             "get": {
                 "description": "Проверка сервера.",
                 "consumes": [
@@ -40,43 +70,19 @@
                     }
                 }
             }
-        },
-        "/category": {
-            "post": {
-                "description": "Show all translation history",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "Show history",
-                "operationId": "history",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.CategoryCreateResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.Response"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "dto.CategoryCreateResponse": {
+        "dto.CategoryCreateRequest": {
             "type": "object",
             "properties": {
-                "id": {
+                "description": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
